# Tsukuyomi-game

./: README.md
GODOT/novo-projeto-de-jogo/: main.gd  main.tscn
GODOT/novo-projeto-de-jogo/GodotPrototype/: Coin.gd  Player.gd.uid
GODOT/scene-00/: icon.svg.import
GODOT/teste/: character_body_2d.gd.uid
GODOT/teste/background/: 3.png.import
GODOT/teste/scene/: game.tscn
GODOT/tsukuyomi_fase_background_coins2/novo-projeto-de-jogo/: Tsukuyomi Fase.pck  export_presets.cfg  main.tscn  moving_platform.gd.uid  project.godot
Islide/: .gitignore  CMakeLists.txt  build.bat  erros.txt  main.cpp
Islide/biomes/: BiomeContext.cpp  BiomeContext.h  BiomeStrategy.h
Islide/enemies/: Enemy.h  EnemyFactory.cpp  EnemyFactory.h
Islide/engine/: Entity.h  Game.cpp  Game.h  Vector2D.h
Islide/player/: Player.cpp  Player.h  PlayerState.cpp  PlayerState.h
Islide/systems/: Command.h  InputHandler.cpp  InputHandler.h  Observer.h  ProgressionSystem.cpp  ProgressionSystem.h  Subject.h
Islide/ui/: HUD.cpp  HUD.h
docs/: Gdd 0.2v.docx  Personagens.docx  ~$d 0.2v.docx  ~WRL2191.tmp
godot/Em progressão/: level_manager.gd  main.tscn  node_3d.tscn  player.gd  player.tscn  project.godot
godot/Em progressão/boss-scene/: icon.svg.import  project.godot
godot/Em progressão/novo-projeto-de-jogo/: main.tscn  player.gd  project.godot
novo-projeto-de-jogo/: collision_shape_2d.gd.uid  player.gd  player.gd.uid  project.godot
teste/: icon.svg.import
teste/background/: 1.png.import  2.png.import  5.png.import
teste/scene/: character_body_2d.gd.uid
(+86 files in other folders)
